# SliceOfItalyApplication/SliceOfItalyApplication/OpenAPIs/swagger.json
@@ -624,7 +624,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Dish"
+                    "$ref": "#/components/schemas/DishForView"
                   }
                 }
               },
@@ -632,7 +632,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Dish"
+                    "$ref": "#/components/schemas/DishForView"
                   }
                 }
               },
@@ -640,7 +640,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Dish"
+                    "$ref": "#/components/schemas/DishForView"
                   }
                 }
               }
@@ -656,17 +656,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Dish"
+                "$ref": "#/components/schemas/DishForView"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/Dish"
+                "$ref": "#/components/schemas/DishForView"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/Dish"
+                "$ref": "#/components/schemas/DishForView"
               }
             }
           }
@@ -677,17 +677,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Dish"
+                  "$ref": "#/components/schemas/DishForView"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Dish"
+                  "$ref": "#/components/schemas/DishForView"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Dish"
+                  "$ref": "#/components/schemas/DishForView"
                 }
               }
             }
@@ -717,17 +717,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Dish"
+                  "$ref": "#/components/schemas/DishForView"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Dish"
+                  "$ref": "#/components/schemas/DishForView"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Dish"
+                  "$ref": "#/components/schemas/DishForView"
                 }
               }
             }
@@ -753,17 +753,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Dish"
+                "$ref": "#/components/schemas/DishForView"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/Dish"
+                "$ref": "#/components/schemas/DishForView"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/Dish"
+                "$ref": "#/components/schemas/DishForView"
               }
             }
           }
@@ -795,17 +795,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Dish"
+                  "$ref": "#/components/schemas/DishForView"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Dish"
+                  "$ref": "#/components/schemas/DishForView"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Dish"
+                  "$ref": "#/components/schemas/DishForView"
                 }
               }
             }
@@ -826,7 +826,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/OrderDish"
+                    "$ref": "#/components/schemas/OrderDishForView"
                   }
                 }
               },
@@ -834,7 +834,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/OrderDish"
+                    "$ref": "#/components/schemas/OrderDishForView"
                   }
                 }
               },
@@ -842,7 +842,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/OrderDish"
+                    "$ref": "#/components/schemas/OrderDishForView"
                   }
                 }
               }
@@ -858,17 +858,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/OrderDish"
+                "$ref": "#/components/schemas/OrderDishForView"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/OrderDish"
+                "$ref": "#/components/schemas/OrderDishForView"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/OrderDish"
+                "$ref": "#/components/schemas/OrderDishForView"
               }
             }
           }
@@ -879,17 +879,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrderDish"
+                  "$ref": "#/components/schemas/OrderDishForView"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrderDish"
+                  "$ref": "#/components/schemas/OrderDishForView"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrderDish"
+                  "$ref": "#/components/schemas/OrderDishForView"
                 }
               }
             }
@@ -919,17 +919,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrderDish"
+                  "$ref": "#/components/schemas/OrderDishForView"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrderDish"
+                  "$ref": "#/components/schemas/OrderDishForView"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrderDish"
+                  "$ref": "#/components/schemas/OrderDishForView"
                 }
               }
             }
@@ -955,17 +955,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/OrderDish"
+                "$ref": "#/components/schemas/OrderDishForView"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/OrderDish"
+                "$ref": "#/components/schemas/OrderDishForView"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/OrderDish"
+                "$ref": "#/components/schemas/OrderDishForView"
               }
             }
           }
@@ -997,17 +997,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrderDish"
+                  "$ref": "#/components/schemas/OrderDishForView"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrderDish"
+                  "$ref": "#/components/schemas/OrderDishForView"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrderDish"
+                  "$ref": "#/components/schemas/OrderDishForView"
                 }
               }
             }
@@ -1402,6 +1402,55 @@
             "items": {
               "$ref": "#/components/schemas/OrderDish"
             },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "DishForView": {
+        "required": [
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "modifiedAt": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "deletedAt": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "isActive": {
+            "type": "boolean"
+          },
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "price": {
+            "type": "number",
+            "format": "double"
+          },
+          "categoryId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "categoryName": {
+            "type": "string",
             "nullable": true
           }
         },
