# SliceOfItalyApplication/SliceOfItalyApplication/ViewModels/OrderViewModels/OrderDetailsViewModel.cs
@@ -1,22 +1,37 @@
 ﻿using System;
+using System.Collections.ObjectModel;
+using System.Diagnostics;
+using System.Threading.Tasks;
 using SliceOfItalyApplication.Service.Reference;
 using SliceOfItalyApplication.ViewModels.Abstract;
+using SliceOfItalyApplication.ViewModels.OrderDishViewModels;
+using SliceOfItalyApplication.Views.OrderDishViews;
+using Xamarin.Forms;
 
 namespace SliceOfItalyApplication.ViewModels.OrderViewModels
 {
     public class OrderDetailsViewModel : AItemDetailsViewModel<OrderForView>
     {
+        private int _id;
         private double _totalPrice;
         private DateTime _orderDate;
         private string _customer;
         private DateTime _createdAt;
         private DateTime _modifiedAt;
-        public int Id { get; set; }
+        private OrderForView _detailedItem;
 
         public OrderDetailsViewModel() : base()
         {
+            Items = new ObservableCollection<OrderDishForView>();
+            LoadItemsCommand = new Command(async () => await ExecuteLoadItemsCommand());
+            AddDishCommand = new Command(async () => await Shell.Current.GoToAsync($"{nameof(NewOrderDishPage)}?{nameof(NewOrderDishViewModel.ItemId)}={Id}"));
         }
 
+        public int Id
+        {
+            get => _id;
+            set => SetProperty(ref _id, value);
+        }
         public double TotalPrice
         {
             get => _totalPrice;
@@ -43,7 +58,10 @@ namespace SliceOfItalyApplication.ViewModels.OrderViewModels
             get => _modifiedAt;
             set => SetProperty(ref _modifiedAt, value);
         }
-        public override void LoadProperties(OrderForView item)
+        public ObservableCollection<OrderDishForView> Items { get; }
+        public Command LoadItemsCommand { get; }
+        public Command AddDishCommand { get; }
+        public override async void LoadProperties(OrderForView item)
         {
             Id = item.Id;
             TotalPrice = item.TotalPrice;
@@ -51,6 +69,32 @@ namespace SliceOfItalyApplication.ViewModels.OrderViewModels
             Customer = item.CustomerName;
             ModifiedAt = item.ModifiedAt?.DateTime ?? DateTime.Now;
             CreatedAt = item.CreatedAt.DateTime;
+            _detailedItem = item;
+            await ExecuteLoadItemsCommand();
+        }
+        async Task ExecuteLoadItemsCommand()
+        {
+            IsBusy = true;
+            try
+            {
+                Items.Clear();
+                var items = _detailedItem.OrderDishes;
+                if (items != null)
+                {
+                    foreach (var item in items)
+                    {
+                        Items.Add(item);
+                    }
+                }
+            }
+            catch (Exception ex)
+            {
+                Debug.WriteLine(ex);
+            }
+            finally
+            {
+                IsBusy = false;
+            }
         }
     }
 }
